--- a/res/values-ar/strings.xml
+++ b/res/values-ar/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">لا</string>
   <string name="delete">حذف</string>
   <string name="please_wait">رجاء الانتظار...</string>
+  <string name="save">حفظ</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">رسالة جديدة</string>
   <!--ApplicationPreferencesActivity-->
@@ -79,9 +80,11 @@
   <string name="BucketedThreadMedia_This_month">هذا الشهر</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">مكالمة واردة</string>
+  <!--CameraActivity-->
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">إزالة</string>
   <string name="ClearProfileActivity_remove_profile_photo">هل تود حذف صورة ملفك الشخصي ؟</string>
+  <!--CommunicationActions-->
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">تم تغيير بيان سلامة المحادثة مع %1$s ، وهذا يعني إما محاولة أحداً اعتراض المحادثة أو ببساطة قيام %2$s بإعادة التسجيل في Signal مرة أخرى.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">لربما ترغب بالتحقق من بيان سلامة المحادثة مع هذا المتصل.</string>
@@ -319,6 +322,7 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">هل أنت جاهز للإغلاق ؟</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">بإمكانكم الآن مشاركة صورة ملفكم الشخصي و اسمكم مع أصدقائكم على Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">هنا صفحات Signal الشخصية</string>
+  <!--GcmBroadcastReceiver-->
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">فشل دائما في اتصال Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal لم يتمكن من التسجيل مع خدمات جوجل بلاي، وتم تعطيل رسائل ومكالمات Signal. رجاء محاولة إعادة التسجيل عبر قائمة الإعدادات بالتطبيق ثم اختيار متقدم.</string>
@@ -378,6 +382,7 @@
   <string name="InviteActivity_lets_switch_to_signal">هيا ننتقل إلى Signal %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">يبدو عدم وجود أي تطبيقات لديك للمشاركة من خلالها.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">الأصدقاء لا يتركون بعضهم يجرون محادثات غير مشفرة.</string>
+  <!--Job-->
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">الإرسال فشل.</string>
   <string name="MessageDetailsRecipient_new_safety_number">رقم أمان جديد</string>
@@ -399,6 +404,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">جارٍ الحذف</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">حذف الرسائل جارٍ...</string>
   <string name="MediaOverviewActivity_Documents">الوثائق</string>
+  <string name="MediaOverviewActivity_Select_all">أختر الكل</string>
+  <string name="MediaOverviewActivity_collecting_attachments">جارٍ جمع المرفقات...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">مكالمة Signal</string>
   <string name="NotificationBarManager__establishing_signal_call">بدء مكالمة Signal</string>
@@ -465,6 +472,7 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">عبارة سرية غير صحيحة!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">تطبيق Google Play Service الذي قمت بتثبيته لا يعمل بشكل صحيح. رجاء إعادة تثبيته والمحاولة مرة أخرى.</string>
+  <!--PushNotificationReceiveJob-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">تقييم التطبيق</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">إذا كنت مستمتع باستخدام التطبيق رجاء مساعدتنا بتقييمه</string>
@@ -478,6 +486,7 @@
   <string name="RecipientPreferenceActivity_block">حظر</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">إلغاء حظر جهة الاتصال؟</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">سوف تتمكن مرة أخرى من استقبال الرسائل والمكالمات من هذا المستخدم.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">خطأ أثناء مغادرة المجموعة</string>
   <string name="RecipientPreferenceActivity_unblock">رفع الحظر</string>
   <string name="RecipientPreferenceActivity_enabled">مفعل</string>
   <string name="RecipientPreferenceActivity_disabled">معطل</string>
@@ -520,6 +529,7 @@
   <string name="SearchFragment_header_conversations">المحادثات</string>
   <string name="SearchFragment_header_contacts">جهات الإتصال</string>
   <string name="SearchFragment_header_messages">الرسائل</string>
+  <!--SendJob-->
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">الإضافة إلى جهات الاتصال</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">الدعوة إلى Signal</string>
