--- a/res/values-bg/strings.xml
+++ b/res/values-bg/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">Не</string>
   <string name="delete">Изтрий</string>
   <string name="please_wait">Моля, изчакайте...</string>
+  <string name="save">Запази</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Ново съобщение</string>
   <!--ApplicationPreferencesActivity-->
@@ -67,9 +68,11 @@
   <string name="BucketedThreadMedia_This_month">Този месец</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Входящо обаждане</string>
+  <!--CameraActivity-->
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Премахни</string>
   <string name="ClearProfileActivity_remove_profile_photo">Премахване на снимката от профила?</string>
+  <!--CommunicationActions-->
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Числата Ви за сигурност с %1$s са променени. Това означава, че или някой се опитва да прехване комуникацията Ви, или че %2$s е преинсталирал Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Може да желаете да проверите числата за сигурност с този контакт.</string>
@@ -80,7 +83,7 @@
   <string name="ContactsCursorLoader_groups">Групи</string>
   <!--ContactsDatabase-->
   <string name="ContactsDatabase_message_s">Съобщение %s</string>
-  <string name="ContactsDatabase_signal_call_s">Signalс обаждане %s</string>
+  <string name="ContactsDatabase_signal_call_s">Signal обаждане %s</string>
   <!--ContactNameEditActivity-->
   <string name="ContactNameEditActivity_given_name">Име</string>
   <string name="ContactNameEditActivity_family_name">Фамилия</string>
@@ -256,7 +259,8 @@
   <string name="ExperienceUpgradeActivity_signal_now_supports_secure_video_calling_long">Signal вече поддържа криптирано видео обаждане. Натиснете, за да научите повече.</string>
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Готови за снимка?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Вече може да споделяте профилна снимка и името си с приятелите си в Signal</string>
-  <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Профилите в Сингал пристигнаха</string>
+  <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Профилите в Signal пристигнаха</string>
+  <!--GcmBroadcastReceiver-->
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Перманентна Signal комуникационна грешка!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal не успя да се регистрира с Google Play Services. Signal съообщения и разговори са деактивирани, моля пререгистрирайте през менюто Настройки &gt; Допълнителние.</string>
@@ -308,6 +312,7 @@
   <string name="InviteActivity_lets_switch_to_signal">Да преминем към Signal %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Изглежда нямате приложения, с които да можете да сподялите.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Приятелите не оставят приятелите си да чатят без криптиране.</string>
+  <!--Job-->
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Неуспешно изпращане</string>
   <string name="MessageDetailsRecipient_new_safety_number">Нови числа за сигурност</string>
@@ -329,6 +334,7 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">Изтриване</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Изтриване на съобщения...</string>
   <string name="MediaOverviewActivity_Documents">Документи</string>
+  <string name="MediaOverviewActivity_Select_all">Избери всичко</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Протича Signal разговор</string>
   <string name="NotificationBarManager__establishing_signal_call">Установяване на Signal разговор</string>
@@ -393,6 +399,7 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Грешна парола!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Версията на Google Play Services, която сте инсталирали не функционира правилно. Моля, преинсталирайте Google Play Services и опитайте пак.</string>
+  <!--PushNotificationReceiveJob-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Оцени тази програма</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ако харесваш тази програма, отдели една секунда и ни помогни като ѝ дадеш оценка.</string>
@@ -406,6 +413,7 @@
   <string name="RecipientPreferenceActivity_block">Блокиране</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Отблокиране на този контакт?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Отново ще може да получавате съобщения и обаждания от този контакт.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Грешка при напускане на групата</string>
   <string name="RecipientPreferenceActivity_unblock">Отблокиране</string>
   <string name="RecipientPreferenceActivity_enabled">Активирано</string>
   <string name="RecipientPreferenceActivity_disabled">Деактивирано</string>
@@ -449,6 +457,7 @@
   <string name="SearchFragment_header_conversations">Чатове</string>
   <string name="SearchFragment_header_contacts">Контакти</string>
   <string name="SearchFragment_header_messages">Съобщения</string>
+  <!--SendJob-->
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Добавяне към контакти</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Покани в Signal</string>
@@ -1036,7 +1045,7 @@
   <!--reminder_header-->
   <string name="reminder_header_outdated_build">Вашата версия на Signal е стара</string>
   <plurals name="reminder_header_outdated_build_details">
-    <item quantity="one">Вашата версия на Signal ще изтече след %d ден. Натиснете, за да я обновите до най-новата версия.</item>
+    <item quantity="one">Вашата версия на Сигнал ще изтече след %d ден. Натиснете, за да я обновите до най-новата версия.</item>
     <item quantity="other">Вашата версия на Signal ще изтече след %d дена. Натиснете, за да я обновите до най-новата версия.</item>
   </plurals>
   <string name="reminder_header_outdated_build_details_today">Вашата версия на Signal ще изтече днес. Натиснете, за да обновите до най-новата версия.</string>
@@ -1077,7 +1086,7 @@
   <string name="Permissions_continue">Продължи</string>
   <string name="Permissions_not_now">Не сега</string>
   <string name="ConversationListActivity_signal_needs_contacts_permission_in_order_to_search_your_contacts_but_it_has_been_permanently_denied">Signal се нуждае от достъп до контактите Ви, за да може да Ви търси в тях, но той му е отказан. Моля, отидете на настройки в менюто и изберете \"Разрешения\" и \"Контакти\".</string>
-  <string name="conversation_activity__enable_signal_messages">АКТИВИРАНЕ НА Signal СЪОБЩЕНИЯ</string>
+  <string name="conversation_activity__enable_signal_messages">АКТИВИРАНЕ НА SIGNAL СЪОБЩЕНИЯ</string>
   <string name="SQLCipherMigrationHelper_migrating_signal_database">Мигриране на базата данни на Signal</string>
   <string name="PushDecryptJob_new_locked_message">Ново заключено съобщение</string>
   <string name="PushDecryptJob_unlock_to_view_pending_messages">Отключете, за да прегледате новите съобщения</string>
