--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">Ne</string>
   <string name="delete">Smazat</string>
   <string name="please_wait">Prosím čekejte…</string>
+  <string name="save">Uložit</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Nová zpráva</string>
   <!--ApplicationPreferencesActivity-->
@@ -73,9 +74,14 @@
   <string name="BucketedThreadMedia_This_month">Tento měsíc</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Příchozí hovor</string>
+  <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">Kamera není dostupná.</string>
+  <string name="CameraActivity_image_save_failure">Nepodařilo se uložit obrázek.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Odebrat</string>
   <string name="ClearProfileActivity_remove_profile_photo">Odebrat profilovou fotografii?</string>
+  <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Nebyl nalezen žádný webový prohlížeč.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Vaše bezpečnostní kódy pro %1$s se změnily. To může znamenat, že se někdo pokouší zachytit vaši konverzaci, nebo jen že si %2$s přeinstaloval Signal a má teď nový identifikační klíč.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Možná budete chtít zkontrolovat vaše bezpečnostní kódy pro tento kontakt.</string>
@@ -136,7 +142,9 @@
   <string name="ConversationActivity_error_leaving_group">Chyba při opouštění skupiny</string>
   <string name="ConversationActivity_specify_recipient">Vyberte prosím kontakt</string>
   <string name="ConversationActivity_unblock_this_contact_question">Odblokovat tento kontakt?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Odblokovat tuto skupinu?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Budete opět moci přijímat zprávy a hovory od tohoto kontaktu.</string>
+  <string name="ConversationActivity_unblock_this_group_description">Současní členové mají možnost vás do skupiny opět přidat.</string>
   <string name="ConversationActivity_unblock">Odblokovat</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">Velikost přílohy překročila limit pro typ zprávy kterou posíláte</string>
   <string name="ConversationActivity_quick_camera_unavailable">Kamera není dostupná</string>
@@ -292,6 +300,8 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Připraven na portrét?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Teď můžete sdílet vaši profilovou fotografii a jméno s vašimi přáteli na Signalu.</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Profily jsou tady</string>
+  <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Načítám zprávu...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Trvalá chyba komunikace Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal se nemůže registrovat k službě Google Play. Zprávy a volání jsou proto zakázány: Prosím zkuste se znovu registrovat v menu Nastavení &gt; Rozšířené.</string>
@@ -347,6 +357,8 @@
   <string name="InviteActivity_lets_switch_to_signal">Pojďme přepnout na Signal: %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Zdá se, že nemáte žádnou aplikaci pro sdílení.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Přátelé nenechávají přátele komunikovat nešifrovaně.</string>
+  <!--Job-->
+  <string name="Job_working_in_the_background">Práce na pozadí...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Nepodařilo se odeslat</string>
   <string name="MessageDetailsRecipient_new_safety_number">Nové bezpečnostní kódy</string>
@@ -372,6 +384,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">Mažu</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Mažu zprávy...</string>
   <string name="MediaOverviewActivity_Documents">Dokumenty</string>
+  <string name="MediaOverviewActivity_Select_all">Označit vše</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Shromažďuji přílohy...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Probíhá Signal volání</string>
   <string name="NotificationBarManager__establishing_signal_call">Navazuji Signal hovor</string>
@@ -440,6 +454,8 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Chybné heslo!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Verze služby Google Play, kterou máte nainstalovánu, nepracuje správně. Prosím, přeinstalujte službu Google Play a zkuste to znovu.</string>
+  <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Načítám zprávu...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Ohodnotit tuto aplikaci</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Pokud jste s aplikací spokojeni, prosím věnujte chvilku jejímu ohodnocení. Pomůže nám to.</string>
@@ -450,9 +466,15 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Zablokovat tento kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Už nebudete přijímat zprávy nebo hovory od tohoto kontaktu.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Zablokovat a opustit tuto skupinu?</string>
+  <string name="RecipientPreferenceActivity_block_group">Zablokovat tuto skupinu?</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">Již nebudete přijímat zprávy a aktulizace od této skupiny.</string>
   <string name="RecipientPreferenceActivity_block">Blokovat</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Odblokovat tento kontakt?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Budete opět moci přijímat zprávy a hovory od tohoto kontaktu.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Odblokovat tuto skupinu?</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">Současní členové mají možnost vás do skupiny opět přidat.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Chyba při opouštění skupiny</string>
   <string name="RecipientPreferenceActivity_unblock">Odblokovat</string>
   <string name="RecipientPreferenceActivity_enabled">Povoleno</string>
   <string name="RecipientPreferenceActivity_disabled">Zakázáno</string>
@@ -491,6 +513,12 @@ telefonní číslo</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signál potřebuje přístup ke kontaktům, abyste s emohli spojit s vašimi přáteli, vyměnovat si zprávy a bezpečně telefonovat.</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Nelze se připojit k službě. Prosím zkontrolujte připojení k internetu a poté to zkuste znovu.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Po snadné ověření vašeho telefonního čísla může Signál automaticky zkontrolovat ověřovací kód pokud mu povolíte přístup k čtení SMS.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Zbývá vám %d krok k odeslání ladícího logu.</item>
+    <item quantity="few">Zbývají vám %d kroky k odeslání ladícího logu.</item>
+    <item quantity="many">Zbývá vám %d kroků k odeslání ladícího logu.</item>
+    <item quantity="other">Zbývá vám %d kroků k odeslání ladícího logu.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Nepodařilo se uložit změny v obrázku.</string>
   <!--Search-->
@@ -498,6 +526,8 @@ telefonní číslo</string>
   <string name="SearchFragment_header_conversations">Konverzace</string>
   <string name="SearchFragment_header_contacts">Kontakty</string>
   <string name="SearchFragment_header_messages">Zprávy</string>
+  <!--SendJob-->
+  <string name="SendJob_sending_a_message">Odesílám zprávu...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Přidat do kontaktů</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Pozvat do Signalu</string>
@@ -620,6 +650,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="QuickResponseService_problem_sending_message">Problém při odesílání zprávy!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Uložit do %s</string>
+  <string name="SaveAttachmentTask_saved">Uloženo</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Hledat</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Hledání konverzací, kontaktů a zpráv</string>
@@ -1046,6 +1077,12 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="preferences_chats__message_text_size">Velikost písma zprávy</string>
   <string name="preferences_events__contact_joined_signal">Kontakt se připojil k Signalu</string>
   <string name="preferences_notifications__priority">Priorita</string>
+  <string name="preferences_communication__category_sealed_sender">Utajený odesílatel</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">Indikátor na displeji</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Zobrazit ikonu když zvolíte \"Detail zprávy\" u zprávy poslané s použitím funkce utajený odesílatel</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Povolit od kohokoliv</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Povolit utajené odesílatele pro příchozí zprávy od lidíé které nemáte kontaktech nebo se kterými nesdílte váš profil.</string>
+  <string name="preferences_communication__sealed_sender_learn_more">Zjisti více</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1180,6 +1217,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.</string>
   <string name="preferences_chats__create_backup">Vytvořit zálohu</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Zadejte heslo pro zálohu</string>
   <string name="RegistrationActivity_restore">Obnovení</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">Nemohu naimportovat zálohy z novější verze aplikace Signal</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Chybné heslo k záloze</string>
   <string name="RegistrationActivity_checking">Kontroluji...</string>
   <string name="RegistrationActivity_d_messages_so_far">%dzpráv zatím...</string>
