--- a/res/values-cy/strings.xml
+++ b/res/values-cy/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">Na</string>
   <string name="delete">Dileu</string>
   <string name="please_wait">Arhoswch...</string>
+  <string name="save">Cadw</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Neges newydd</string>
   <!--ApplicationPreferencesActivity-->
@@ -73,9 +74,14 @@
   <string name="BucketedThreadMedia_This_month">Mis yma</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Galwad i mewn</string>
+  <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">Camera ddim ar agel</string>
+  <string name="CameraActivity_image_save_failure">Methu cadw delwedd</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Tynnu</string>
   <string name="ClearProfileActivity_remove_profile_photo">Tynnu\'r llun proffil?</string>
+  <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Heb ganfod porwr gwe.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Mae\'ch rhif diogelwch gyda %1$s wedi newid. Gall hyn olygu bod rhywun yn ceisio ymyrryd a\'ch cyfathrebu, neu bod % ​2$s wedi cael ei ail-osod.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Efallai yr hoffech wirio\'ch rhif diogelwch gyda\'r cyswllt hwn.</string>
@@ -138,7 +144,9 @@ Send neges heb ei ddiogelu?</string>
   <string name="ConversationActivity_error_leaving_group">Gwall wrth adael grŵp</string>
   <string name="ConversationActivity_specify_recipient">Dewiswch gyswllt</string>
   <string name="ConversationActivity_unblock_this_contact_question">Dadrwystro\'r cyswllt hwn?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Dadrwystro\'r grŵp hwn?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Byddwch unwaith eto yn gallu derbyn negeseuon a galwadau o\'r cyswllt hwn.</string>
+  <string name="ConversationActivity_unblock_this_group_description">Bydd aelodau cyfredol yn gallu eich ychwanegu i\'r grwp eto.</string>
   <string name="ConversationActivity_unblock">Dadrwystro</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">Mae atodiad yn fwy na therfynau maint y math o neges rydych chi\'n ei hanfon.</string>
   <string name="ConversationActivity_quick_camera_unavailable">Camera ddim ar gael</string>
@@ -294,6 +302,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Barod ar gyfer eich llun agos?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Nawr gallwch chi rannu llun proffil ac enw gyda ffrindiau ar Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Mae proffiliau Signal yma</string>
+  <!--GcmBroadcastReceiver-->
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Methiant cyfathrebu Signal parhaol!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Nid yw Signal yn gallu cofrestru gyda Google Play Services. Mae negeseuon a galwadau Signal wedi\'u hanalluogi, ceisiwch ailgofrestru yn Gosodiadau &gt; Uwch.</string>
@@ -349,6 +358,8 @@ Send neges heb ei ddiogelu?</string>
   <string name="InviteActivity_lets_switch_to_signal">Gadewch i ni newid i Signal %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Mae\'n edrych fel nad oes gennych unrhyw apiau i\'w rhannu.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Dyw ffrindiau ddim gadael i ffrindiau sgwrsio heb amgryptiad.</string>
+  <!--Job-->
+  <string name="Job_working_in_the_background">Yn gweithio yn y cefndir...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Methwyd anfon</string>
   <string name="MessageDetailsRecipient_new_safety_number">Rhif diogelwch newydd</string>
@@ -374,6 +385,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="MediaOverviewActivity_Media_delete_progress_title">Wrthi\'n dileu</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Dileu negeseuon...</string>
   <string name="MediaOverviewActivity_Documents">Dogfennau</string>
+  <string name="MediaOverviewActivity_Select_all">Dewis popeth</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Ar ganol galwad Signal</string>
   <string name="NotificationBarManager__establishing_signal_call">Sicrhau galwad Signal</string>
@@ -442,6 +454,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Cyfrinair annilys!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Nid yw\'r fersiwn o Google Play Services rydych chi wedi\'i osod yn gweithredu\'n gywir. Ail-osodwch Google Play Services a cheisiwch eto.</string>
+  <!--PushNotificationReceiveJob-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Graddio\'r ap</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Os ydych chi\'n mwynhau defnyddio\'r app hwn, cymerwch amser i\'n helpu ni drwy ei raddio.</string>
@@ -452,9 +465,14 @@ Send neges heb ei ddiogelu?</string>
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Rhwystro\'r cysllwt hwn?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Ni fyddwch bellach yn derbyn negeseuon a galwadau o\'r cyswllt hwn.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Rhwystro a gadael y grŵp hwn?</string>
+  <string name="RecipientPreferenceActivity_block_group">Rhwystro\\'r grŵp hwn?</string>
   <string name="RecipientPreferenceActivity_block">Rhwystro</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Dadrwystro\'r cyswllt hwn?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Byddwch unwaith eto yn gallu derbyn negeseuon a galwadau o\'r cyswllt hwn.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Dadrwystro\'r grŵp hwn?</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">Bydd aelodau cyfredol yn gallu eich ychwanegu i\'r grwp eto.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Gwall wrth adael grŵp</string>
   <string name="RecipientPreferenceActivity_unblock">Dadrwystro</string>
   <string name="RecipientPreferenceActivity_enabled">Galluogwyd</string>
   <string name="RecipientPreferenceActivity_disabled">Analluogwyd</string>
@@ -501,6 +519,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="SearchFragment_header_conversations">Sgyrsiau</string>
   <string name="SearchFragment_header_contacts">Cysylltiadau</string>
   <string name="SearchFragment_header_messages">Negeseuon</string>
+  <!--SendJob-->
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Ychwanegu at Cysylltiadau</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Gwahodd i Signal</string>
@@ -1050,6 +1069,9 @@ Send neges heb ei ddiogelu?</string>
   <string name="preferences_chats__message_text_size">Maint ffont negeseuon</string>
   <string name="preferences_events__contact_joined_signal">Cysylltiad wedi ymuno â Signal</string>
   <string name="preferences_notifications__priority">Blaenoriaeth</string>
+  <string name="preferences_communication__category_sealed_sender">Anfonwr dan Sêl</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Dangos eicon statws pan fyddwch yn dewis \"Manylion neges\" ar negeseuon sydd wedi eu anfon gan ddefnyddio anfonwr dan sêl.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Caniatáu gan bawb</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1183,6 +1205,7 @@ Send neges heb ei ddiogelu?</string>
   <string name="preferences_chats__create_backup">Creu copi wrth gefn</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Rhoi\'r cyfrinymadrodd wrth gefn</string>
   <string name="RegistrationActivity_restore">Adfer</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">Methu mewnforio o fersiynau mwy diweddar o Signal</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Cyfrinymadrodd wrth gefn anghywir</string>
   <string name="RegistrationActivity_checking">Gwirio...</string>
   <string name="RegistrationActivity_d_messages_so_far">%d neges hyd yn hyn</string>
