--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">No</string>
   <string name="delete">Eliminar</string>
   <string name="please_wait">Por favor, espere...</string>
+  <string name="save">Guardar</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Nuevo mensaje</string>
   <!--ApplicationPreferencesActivity-->
@@ -67,9 +68,11 @@
   <string name="BucketedThreadMedia_This_month">Este mes</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Llamada entrante</string>
+  <!--CameraActivity-->
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Eliminar</string>
   <string name="ClearProfileActivity_remove_profile_photo">¿Eliminar foto del perfil?</string>
+  <!--CommunicationActions-->
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Su número de seguridad con %1$s ha cambiado. Esto podría significar que o bien alguien está tratando de interceptar su comunicación, o que %2$s simplemente ha reinstalado Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Puede que desee verificar su número de seguridad con este contacto.</string>
@@ -131,6 +134,7 @@
   <string name="ConversationActivity_specify_recipient">Por favor, elija un contacto</string>
   <string name="ConversationActivity_unblock_this_contact_question">¿Desbloquear este contacto?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Podrá volver a recibir mensajes y llamadas de este contacto.</string>
+  <string name="ConversationActivity_unblock_this_group_description">Los miembros podrán añadirte de nuevo al grupo.</string>
   <string name="ConversationActivity_unblock">Desbloquear</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">El adjunto excede los límites de tamaño para el tipo de mensaje que está enviando.</string>
   <string name="ConversationActivity_quick_camera_unavailable">Cámara no disponible</string>
@@ -264,6 +268,7 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">¿Listo para su retrato?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Ahora puede compartir la foto y nombre de un perfil con amigos en Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Los perfiles de Signal están aquí</string>
+  <!--GcmBroadcastReceiver-->
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">¡Fallo permanente de comunicación de Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal fué incapaz de registrarse con Google Play Services. Los mensajes y llamadas de Signal han sido desactivados, por favor, intenta registrarte otra vez en Configuración &gt; Avanzado.</string>
@@ -315,6 +320,7 @@
   <string name="InviteActivity_lets_switch_to_signal">Pasémonos a Signal: %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Parece que no tiene ninguna aplicación con qué compartir.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Los verdaderos amigos no dejan que sus amigos hablen sin cifrar</string>
+  <!--Job-->
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Fallo al enviar</string>
   <string name="MessageDetailsRecipient_new_safety_number">Nuevo número de seguridad</string>
@@ -336,6 +342,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">Eliminando</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Eliminando mensajes...</string>
   <string name="MediaOverviewActivity_Documents">Documentos</string>
+  <string name="MediaOverviewActivity_Select_all">Seleccionar todo</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Recopilando adjuntos...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Llamada de Signal en curso</string>
   <string name="NotificationBarManager__establishing_signal_call">Estableciendo llamada de Signal</string>
@@ -405,6 +413,7 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">¡Clave de acceso no válida!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">La versión de Google Play Services que ha instalado no está funcionando correctamente. Por favor, reinstale Google Play Services e inténtelo de nuevo.</string>
+  <!--PushNotificationReceiveJob-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Evalúe esta aplicación</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Si disfruta usando esta aplicación, por favor, tómese un momento para ayudarnos evaluándola.</string>
@@ -415,9 +424,12 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">¿Bloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Ya no recibirá mensajes y llamadas de este contacto.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">No podrás enviar o recibir más mensajes en este grupo.</string>
   <string name="RecipientPreferenceActivity_block">Bloquear</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">¿Desbloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Podrá volver a recibir mensajes y llamadas de este contacto.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">Los miembros podrán añadirte de nuevo al grupo.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Error al dejar el grupo</string>
   <string name="RecipientPreferenceActivity_unblock">Desbloquear</string>
   <string name="RecipientPreferenceActivity_enabled">Habilitado</string>
   <string name="RecipientPreferenceActivity_disabled">Deshabilitado</string>
@@ -467,6 +479,7 @@ número de teléfono
   <string name="SearchFragment_header_conversations">Conversaciones</string>
   <string name="SearchFragment_header_contacts">Contactos</string>
   <string name="SearchFragment_header_messages">Mensajes</string>
+  <!--SendJob-->
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Añadir a Contactos</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Invitar a Signal</string>
@@ -1002,6 +1015,8 @@ Se recibió un mensaje de intercambio de claves para una versión no válida del
   <string name="preferences_chats__message_text_size">Tamaño de fuente del mensaje</string>
   <string name="preferences_events__contact_joined_signal">Un contacto se ha unido a Signal</string>
   <string name="preferences_notifications__priority">Prioridad</string>
+  <string name="preferences_communication__category_sealed_sender">Remitente sellado</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Al activar la opción, usuarios de Signal que no estén entre tus contactos y con los que no has compartido tu perfil pueden enviarte mensajes con remitente sellado.</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
