--- a/res/values-et/strings.xml
+++ b/res/values-et/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">Ei</string>
   <string name="delete">Kustuta</string>
   <string name="please_wait">Palun oota...</string>
+  <string name="save">Salvesta</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Uus sõnum</string>
   <!--ApplicationPreferencesActivity-->
@@ -67,9 +68,11 @@
   <string name="BucketedThreadMedia_This_month">See kuu</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Sissetulev kõne</string>
+  <!--CameraActivity-->
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Eemalda</string>
   <string name="ClearProfileActivity_remove_profile_photo">Eemaldad profiilipildi?</string>
+  <!--CommunicationActions-->
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Sinu turvanumber kontaktiga %1$s on muutunud. See võib tähendada, et keegi proovib sinu vestlusesse sekkuda või et %2$s lihtsalt taasinstallis Signali.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Sa võid tahta kinnitada oma turvanumbrit selle kontaktiga.</string>
@@ -131,6 +134,7 @@
   <string name="ConversationActivity_specify_recipient">Palun vali kontakt</string>
   <string name="ConversationActivity_unblock_this_contact_question">Eemaldada kontakti blokeering?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Sa saad uuesti vastu võtta sõnumeid ja kõnesid sellelt kontaktilt.</string>
+  <string name="ConversationActivity_unblock_this_group_description">Grupi liikmetel on võimalik sind uuesti gruppi lisada.</string>
   <string name="ConversationActivity_unblock">Eemalda blokeering</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">Manus ületab saadetava sõnumitüübi suuruspiiranguid.</string>
   <string name="ConversationActivity_quick_camera_unavailable">Kaamera pole saadaval</string>
@@ -264,6 +268,7 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Oled valmis oma lähivõtteks?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Nüüd sa saad Signalis sõpradega jagada profiilipilti ja -nime</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signali profiilid on kohal</string>
+  <!--GcmBroadcastReceiver-->
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Püsiv Signali ühendusviga!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal ei saanud registreerida teenusega Google Play Services. Signali sõnumid ja kõned on keelatud, palun proovi taas-registreerida menüüs Seaded &gt; Täpsem.</string>
@@ -315,6 +320,7 @@
   <string name="InviteActivity_lets_switch_to_signal">Lähme Signalile üle: %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Tundub, et sul pole ühtegi rakendust, kuhu jagada.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Sõbrad ei luba sõpradel krüptimata rääkida.</string>
+  <!--Job-->
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Saatmine ebaõnnestus</string>
   <string name="MessageDetailsRecipient_new_safety_number">Uus turvanumber</string>
@@ -336,6 +342,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">Kustutan</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Kustutan sõnumeid...</string>
   <string name="MediaOverviewActivity_Documents">Dokumendid</string>
+  <string name="MediaOverviewActivity_Select_all">Vali kõik</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Kogun manuseid...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signali kõne käib</string>
   <string name="NotificationBarManager__establishing_signal_call">Alustan Signali kõnet</string>
@@ -405,6 +413,7 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Sobimatu salaväljend!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Google Play Services versioon, mis sul on installitud, ei toimi korrektselt. Palun taasinstalli Google Play Services ja proovi uuesti.</string>
+  <!--PushNotificationReceiveJob-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Hinda seda rakendust</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Kui sa naudid selle rakenduse kasutamist, palun võta aega ja hinda seda, et meid aidata.</string>
@@ -415,9 +424,12 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokeerid selle kontakti?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Sa ei saa sellelt kontaktilt enam sõnumeid ja kõnesid vastu võtta.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">Sa ei saa sellest grupist rohkem sõnumeid ja uuendusi.</string>
   <string name="RecipientPreferenceActivity_block">Blokeeri</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Eemaldada kontakti blokeering?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Sa saad uuesti sellelt kontaktilt sõnumeid ja kõnesid vastu võtta.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">Grupi liikmetel on võimalik sind uuesti gruppi lisada.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Grupist lahkumisel tekkis viga</string>
   <string name="RecipientPreferenceActivity_unblock">Eemalda blokeering</string>
   <string name="RecipientPreferenceActivity_enabled">Lubatud</string>
   <string name="RecipientPreferenceActivity_disabled">Keelatud</string>
@@ -467,6 +479,7 @@
   <string name="SearchFragment_header_conversations">Vestlused</string>
   <string name="SearchFragment_header_contacts">Kontaktid</string>
   <string name="SearchFragment_header_messages">Sõnumid</string>
+  <!--SendJob-->
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Lisa kontaktidesse</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Kutsu Signalisse</string>
@@ -1002,6 +1015,8 @@
   <string name="preferences_chats__message_text_size">Sõnumi fondisuurus</string>
   <string name="preferences_events__contact_joined_signal">Kontakt liitus Signaliga</string>
   <string name="preferences_notifications__priority">Prioriteet</string>
+  <string name="preferences_communication__category_sealed_sender">Kaetud saatja</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Luba kaetud saatja sissetulevate sõnumite juures mitte-kontaktidelt ja isikutelt, kellega sa pole enda profiili jaganud.</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
