--- a/res/values-hu/strings.xml
+++ b/res/values-hu/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">Nem</string>
   <string name="delete">Törlés</string>
   <string name="please_wait">Kérlek várj...</string>
+  <string name="save">Mentés</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Új üzenet</string>
   <!--ApplicationPreferencesActivity-->
@@ -67,9 +68,14 @@
   <string name="BucketedThreadMedia_This_month">Ebben a hónapban</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Bejövő hívás</string>
+  <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">A kamera nem érhető el.</string>
+  <string name="CameraActivity_image_save_failure">Nem sikerült elmenteni a képet.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Eltávolítás</string>
   <string name="ClearProfileActivity_remove_profile_photo">Eltávolítod a profilképed?</string>
+  <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Nem található böngésző.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Biztonsági számod a következő kontaktoddal megváltozott: %1$s. Ez jelentheti azt, hogy valaki megpróbálja lehallgatni a kommunikációdat, de az is lehetséges, hogy %2$s egyszerűen csak újratelepítette a Signal-t.
     </string>
@@ -131,7 +137,9 @@
   <string name="ConversationActivity_error_leaving_group">Hiba történt a csoport elhagyásakor</string>
   <string name="ConversationActivity_specify_recipient">Kérlek válassz egy kontaktot</string>
   <string name="ConversationActivity_unblock_this_contact_question">Feloldod ezt a kontaktot?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Feloldod a csoport blokkolását?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Újra fogadhatsz üzeneteket és hívásokat ettől a kontakttól.</string>
+  <string name="ConversationActivity_unblock_this_group_description">A csoport tagjai újra hozzáadhatnak a csoporthoz a későbbiekben.</string>
   <string name="ConversationActivity_unblock">Blokkolás feloldása</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">A melléklet mérete meghaladja az adott típushoz tartozó mérethatárt.</string>
   <string name="ConversationActivity_quick_camera_unavailable">A kamera nem érhető el</string>
@@ -265,6 +273,8 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Készen állsz egy közeli portréra?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Mostantól megoszthatod barátaiddal profilképedet és egyéni nevedet Signal-on</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">A Signal profilok megérkeztek</string>
+  <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Üzenet letöltése...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Elhúzódó Signal kommunikációs hiba!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">A Signal nem tudott beregisztrálni a Google Play Szolgáltatásokra. A Signal üzenetek és hívások ezért le lettek tiltva. Kérlek próbálj meg újraregisztrálni a Beállítások &gt; Haladó-ban!</string>
@@ -316,6 +326,8 @@
   <string name="InviteActivity_lets_switch_to_signal">Válts Signal-ra: %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Úgy néz ki, hogy egy alkalmazásod sincs a megosztás kezeléséhez.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Az igaz barátok nem hagyják barátaiknak, hogy titkosítatlanul csevegjenek.</string>
+  <!--Job-->
+  <string name="Job_working_in_the_background">Feldolgozás a háttérben...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Nem sikerült elküldeni</string>
   <string name="MessageDetailsRecipient_new_safety_number">Új biztonsági szám</string>
@@ -337,6 +349,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">Törlés</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Üzenetek törlése...</string>
   <string name="MediaOverviewActivity_Documents">Dokumentumok</string>
+  <string name="MediaOverviewActivity_Select_all">Összes kiválasztása</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Mellékletek összegyűjtése...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal hívás folyamatban</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal hívás létesítése</string>
@@ -407,6 +421,8 @@
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Az általad használt Google Play Szolgáltatások nem működnek megfelelően.
 Kérlek telepítsd újra a Google Play Szolgáltatásokat, majd próbáld újra!</string>
+  <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Üzenet letöltése...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Értékeld az alkalmazást</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Ha szívesen használod ezt az alkalmazást, akkor kérlek szánj rá egy percet, hogy segíts nekünk értékelésed leadásával.</string>
@@ -417,9 +433,15 @@ Kérlek telepítsd újra a Google Play Szolgáltatásokat, majd próbáld újra!
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Blokkolod ezt a kontaktot?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Többé nem kapsz üzeneteket és hívásokat ettől a kontakttól.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Letiltod és kilépsz a csoportból?</string>
+  <string name="RecipientPreferenceActivity_block_group">Letiltod a csoportot?</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">Többé nem kapsz üzeneteket és frissítéseket ebből a csoportból.</string>
   <string name="RecipientPreferenceActivity_block">Blokkolás</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Feloldod a kontakt blokkolását?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Újra kaphatsz üzeneteket és hívásokat ettől a kontakttól.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Feloldod a csoport blokkolását?</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">A csoport tagjai újra hozzáadhatnak a csoporthoz a későbbiekben.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Hiba történt a csoport elhagyásakor</string>
   <string name="RecipientPreferenceActivity_unblock">Feloldás</string>
   <string name="RecipientPreferenceActivity_enabled">Engedélyezve</string>
   <string name="RecipientPreferenceActivity_disabled">Letiltva</string>
@@ -462,6 +484,10 @@ szám (%s) érvénytelen.
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">A Signal-nak szüksége van a kontaktjaidhoz és médiádhoz való hozzáférésre a barátokkal való kapcsolódáshoz, üzenetváltáshoz és biztonságos hívások bonyolításához.</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Nem lehet kapcsolódni szolgáltatáshoz. Kérlek ellenőrizd a hálózati kapcsolatot és próbáld újra!</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Hogy könnyedén ellenőrizd a telefonszámod, a Signal automatikusan érzékeli az ellenőrző kódod, ha engedélyezed a Signal-nak, hogy megtekintse az SMS üzeneteket.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Még %d lépésre vagy a fejlesztői napló elküldésétől.</item>
+    <item quantity="other">Még %d lépésre vagy a fejlesztői napló elküldésétől.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Nem sikerült elmenteni a kép változásait</string>
   <!--Search-->
@@ -469,6 +495,8 @@ szám (%s) érvénytelen.
   <string name="SearchFragment_header_conversations">Beszélgetések</string>
   <string name="SearchFragment_header_contacts">Kontaktok</string>
   <string name="SearchFragment_header_messages">Üzenetek</string>
+  <!--SendJob-->
+  <string name="SendJob_sending_a_message">Üzenet küldése...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Hozzáadás a Névjegyzékhez</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Meghívás a Signal-ba</string>
@@ -594,6 +622,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="QuickResponseService_problem_sending_message">Probléma lépett fel az üzenet küldése során!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Mentve ide: %s</string>
+  <string name="SaveAttachmentTask_saved">Elmentve</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Keresés</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Keresés a beszélgetésekben, kontaktokban és üzenetekben</string>
@@ -1005,6 +1034,12 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="preferences_chats__message_text_size">Üzenetek betűmérete</string>
   <string name="preferences_events__contact_joined_signal">Ismerős csatlakozott a Signal-hoz</string>
   <string name="preferences_notifications__priority">Prioritás</string>
+  <string name="preferences_communication__category_sealed_sender">Rejtett feladó</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">Indikátorok kijelzése</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Jelenítsen meg egy státuszikont a rejtett feladóval feladott üzenetek \"Üzenet részletei\" menüpontjában.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Engedélyezés mindenkitől</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Rejtett feladóval érkező üzenetek engedélyezése olyan nem-kontaktoktól és személyektől is, akikkel nem osztottad meg profilod.</string>
+  <string name="preferences_communication__sealed_sender_learn_more">További információ</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1136,6 +1171,7 @@ Kulcs-csere üzenet érkezett érvénytelen protokoll verzióhoz.
   <string name="preferences_chats__create_backup">Biztonsági mentés létrehozása</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Biztonsági mentés jelmondatának megadása</string>
   <string name="RegistrationActivity_restore">Visszaállítás</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">Nem sikerült beolvasni a Signal újabb verziójából származó biztonsági mentést</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Hibás a biztonsági mentéshez tartozó jelmondat</string>
   <string name="RegistrationActivity_checking">Ellenőrzés...</string>
   <string name="RegistrationActivity_d_messages_so_far">Eddig %d db üzenet...</string>
