--- a/res/values-in/strings.xml
+++ b/res/values-in/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">Tidak</string>
   <string name="delete">Hapus</string>
   <string name="please_wait">Mohon tunggu...</string>
+  <string name="save">Simpan</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Pesan baru</string>
   <!--ApplicationPreferencesActivity-->
@@ -64,9 +65,11 @@
   <string name="BucketedThreadMedia_This_month">Bulan ini</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Panggilan masuk</string>
+  <!--CameraActivity-->
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Hapus</string>
   <string name="ClearProfileActivity_remove_profile_photo">Buang foto profil?</string>
+  <!--CommunicationActions-->
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Angka keamanan Anda dengan %1$s telah berubah. Ini bisa disebabkan seseorang mencoba mencegat komunikasi Anda, atau disebabkan %2$s telah memasang ulang Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Sebaiknya Anda memastikan angka keamanan dengan kontak ini.</string>
@@ -172,7 +175,7 @@
   <string name="ConversationFragment_sms">SMS</string>
   <string name="ConversationFragment_deleting">Menghapus</string>
   <string name="ConversationFragment_deleting_messages">Menghapus pesan...</string>
-  <string name="ConversationFragment_quoted_message_not_found">Pesan asli tidak lagi tersedia</string>
+  <string name="ConversationFragment_quoted_message_not_found">Pesan asli tidak ditemukan.</string>
   <string name="ConversationFragment_quoted_message_no_longer_available">Pesan asli tidak lagi tersedia</string>
   <!--ConversationListActivity-->
   <string name="ConversationListActivity_there_is_no_browser_installed_on_your_device">Tidak ada peramban yang terpasang pada perangkat Anda.</string>
@@ -250,6 +253,7 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Siap foto wajah</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Sekarang anda dapat membagikan nama dan foto profil dengan kawan anda di Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Profil signal ada di sini</string>
+  <!--GcmBroadcastReceiver-->
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Kegagalan permanen komunikasi Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal tidak dapat melakukan registrasi dengan Layanan Google Play. Fitur Signal seperti pesan dan panggilan di nonaktifkan, mohon registrasi ulang melalui Pengaturan &gt; Lanjutan.</string>
@@ -299,6 +303,7 @@
   <string name="InviteActivity_lets_switch_to_signal">Ayo pindah ke Signal: %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Sepertinya Anda tidak memiliki aplikasi untuk berbagi.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Teman tidak membiarkan temannya mengobrol tanpa enkripsi.</string>
+  <!--Job-->
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Gagal mengirim</string>
   <string name="MessageDetailsRecipient_new_safety_number">Angka keamanan baru</string>
@@ -318,6 +323,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">Menghapus</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Menghapus pesan...</string>
   <string name="MediaOverviewActivity_Documents">Dokumen</string>
+  <string name="MediaOverviewActivity_Select_all">Pilih semua</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Mengumpulkan lampiran...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Panggilan masuk Signal berlangsung</string>
   <string name="NotificationBarManager__establishing_signal_call">Menyiapkan panggilan Signal</string>
@@ -387,6 +394,7 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Frasa sandi tidak valid!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versi dari Layanan Google Play yang Anda pasang tidak berfungsi dengan benar. Mohon pasang ulang Layanan Google Play dan coba lagi.</string>
+  <!--PushNotificationReceiveJob-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Nilai aplikasi ini</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Jika Anda suka menggunakan aplikasi ini, luangkan waktu sejenak untuk membantu kami dengan memberikan nilai pada aplikasi.</string>
@@ -400,6 +408,7 @@
   <string name="RecipientPreferenceActivity_block">Blokir</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Buka blokir kontak ini?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Anda kembali dapat menerima pesan dan panggilan dari kontak ini.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Gagal meninggalkan grup</string>
   <string name="RecipientPreferenceActivity_unblock">Buka blokir</string>
   <string name="RecipientPreferenceActivity_enabled">Aktif</string>
   <string name="RecipientPreferenceActivity_disabled">Nonaktif</string>
@@ -449,6 +458,7 @@ isikan (%s) tidak tepat.
   <string name="SearchFragment_header_conversations">Percakapan</string>
   <string name="SearchFragment_header_contacts">Kontak</string>
   <string name="SearchFragment_header_messages">Pesan</string>
+  <!--SendJob-->
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Tambahkan ke Kontak</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Undang ke Signal</string>
@@ -576,6 +586,7 @@ Diterima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="SearchToolbar_search">Cari</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Cari untuk percakapan, daftar kontak dan pesan</string>
   <!--ShortcutLauncherActivity-->
+  <string name="ShortcutLauncherActivity_invalid_shortcut">Pintasan tidak sah</string>
   <!--SingleRecipientNotificationBuilder-->
   <string name="SingleRecipientNotificationBuilder_signal">Signal</string>
   <string name="SingleRecipientNotificationBuilder_new_message">Pesan baru</string>
@@ -729,6 +740,9 @@ Diterima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="log_submit_activity__button_dont_submit">Jangan Kirim</string>
   <string name="log_submit_activity__button_submit">Kirim</string>
   <string name="log_submit_activity__button_got_it">Paham</string>
+  <string name="log_submit_activity__button_compose_email">Tulis surel</string>
+  <string name="log_submit_activity__loading_logs">Memuat log...</string>
+  <string name="log_submit_activity__uploading_logs">Mengunggah log...</string>
   <string name="log_submit_activity__success">Sukses!</string>
   <string name="log_submit_activity__copied_to_clipboard">Disalin ke papan klip</string>
   <string name="log_submit_activity__choose_email_app">Pilih aplikasi email</string>
@@ -776,6 +790,7 @@ Diterima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="recipient_preference_activity__shared_media">Bagikan media</string>
   <!--recipient_preferences-->
   <string name="recipient_preferences__mute_conversation">Bisukan percakapan</string>
+  <string name="recipient_preferences__custom_notifications_settings">Setelan notifikasi sistem</string>
   <string name="recipient_preferences__notification_sound">Suara pemberitahuan</string>
   <string name="recipient_preferences__vibrate">Bergetar</string>
   <string name="recipient_preferences__block">Blokir</string>
@@ -883,6 +898,7 @@ Diterima pesan pertukaran kunci untuk versi protokol yang tidak valid.
   <string name="preferences__inactivity_timeout_passphrase">Frasa sandi untuk habis waktu karena tiada aktivitas</string>
   <string name="preferences__inactivity_timeout_interval">Interval habis waktu karena tiada aktivitas</string>
   <string name="preferences__notifications">Pemberitahuan</string>
+  <string name="preferences__system_notification_settings">Setelan notifikasi sistem</string>
   <string name="preferences__led_color">Warna LED</string>
   <string name="preferences__led_color_unknown">Tidak dikenal</string>
   <string name="preferences__pref_led_blink_title">Pola kedip LED</string>
