--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">לא</string>
   <string name="delete">מחק</string>
   <string name="please_wait">אנא המתן...</string>
+  <string name="save">שמור</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">הודעה חדשה</string>
   <!--ApplicationPreferencesActivity-->
@@ -73,9 +74,14 @@
   <string name="BucketedThreadMedia_This_month">החודש</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">שיחה נכנסת</string>
+  <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">המצלמה אינה זמינה</string>
+  <string name="CameraActivity_image_save_failure">שמירת התמונה נכשלה.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">הסר</string>
   <string name="ClearProfileActivity_remove_profile_photo">להסיר תצלום פרופיל?</string>
+  <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">לא נמצא דפדפן.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">מספר הביטחון שלך עם %1$s השתנה. ייתכן שזה אומר שמישהו מנסה ליירט את התקשורת שלכם או שפשוט %2$s התקין מחדש את Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">ייתכן שתרצה לוודא את מספר הביטחון שלך עם איש קשר זה.</string>
@@ -136,7 +142,9 @@
   <string name="ConversationActivity_error_leaving_group">שגיאה בעזיבת קבוצה</string>
   <string name="ConversationActivity_specify_recipient">אנא בחר איש קשר</string>
   <string name="ConversationActivity_unblock_this_contact_question">לבטל חסימת איש קשר זה?</string>
+  <string name="ConversationActivity_unblock_this_group_question">לבטל חסימה של קבוצה זו?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">תוכל שוב לקבל הודעות ושיחות מאיש קשר זה.</string>
+  <string name="ConversationActivity_unblock_this_group_description">חברי קבוצה קיימים יוכלו להוסיף אותך אל הקבוצה שוב.</string>
   <string name="ConversationActivity_unblock">בטל חסימה</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">הצרופה חורגת ממגבלות הגודל עבור הסוג של ההודעה שאתה שולח.</string>
   <string name="ConversationActivity_quick_camera_unavailable">המצלמה אינה זמינה</string>
@@ -292,6 +300,7 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">מוכן לתקריב שלך?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">עכשיו אתה יכול לשתף תצלום ושם של פרופיל עם חברים ב-Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">פרופילי Signal כאן</string>
+  <!--GcmBroadcastReceiver-->
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">כישלון תקשורת קבוע של Signal!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal לא היה יכול להירשם עם שירותי Google Play. הודעות ושיחות של Signal הושבתו, אנא נסה להירשם מחדש בהגדרות &lt; מתקדם.</string>
@@ -347,6 +356,7 @@
   <string name="InviteActivity_lets_switch_to_signal">בוא נחליף אל Signal: %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">נראה שאין לך יישומים כלשהם לשתף בהם.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">חברים לא נותנים לחברים להתכתב באופן לא מוצפן.</string>
+  <!--Job-->
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">נכשל לשלוח</string>
   <string name="MessageDetailsRecipient_new_safety_number">מספר ביטחון חדש</string>
@@ -372,6 +382,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">מוחק</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">מוחק הודעות...</string>
   <string name="MediaOverviewActivity_Documents">מסמכים</string>
+  <string name="MediaOverviewActivity_Select_all">בחר הכל</string>
+  <string name="MediaOverviewActivity_collecting_attachments">אוסף קבצים מצורפים...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">שיחת Signal בתהליך</string>
   <string name="NotificationBarManager__establishing_signal_call">מקים שיחת Signal</string>
@@ -440,6 +452,7 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">משפט־סיסמה לא תקף!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">הגרסה של שירותי Google Play המותקנת מתפקדת כראוי. אנא התקן מחדש את שירותי Google Play ונסה שוב.</string>
+  <!--PushNotificationReceiveJob-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">דרג יישום זה</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">אם נהנית להשתמש באפליקציה הזאת, אולי אפשר לבקש ממך להקדיש רגע לעזור לנו ולדרג אותה?</string>
@@ -450,9 +463,13 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">לחסום את איש הקשר הזה?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">לא תקבל יותר הודעות ושיחות מאיש קשר זה.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">לא תקבל יותר הודעות או עדכונים מקבוצה זו.</string>
   <string name="RecipientPreferenceActivity_block">חסום</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">לבטל את החסימה של איש הקשר הזה?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">תוכל שוב לקבל הודעות ושיחות מאיש קשר זה.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">לבטל חסימה של קבוצה זו?</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">חברי קבוצה קיימים יוכלו להוסיף אותך אל הקבוצה שוב.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">שגיאה בעזיבת קבוצה</string>
   <string name="RecipientPreferenceActivity_unblock">בטל חסימה</string>
   <string name="RecipientPreferenceActivity_enabled">מאופשר</string>
   <string name="RecipientPreferenceActivity_disabled">מושבת</string>
@@ -499,6 +516,7 @@
   <string name="SearchFragment_header_conversations">שיחות</string>
   <string name="SearchFragment_header_contacts">אנשי קשר</string>
   <string name="SearchFragment_header_messages">הודעות</string>
+  <!--SendJob-->
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">הוסף לאנשי קשר</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">הזמן אל Signal</string>
@@ -1048,6 +1066,8 @@
   <string name="preferences_chats__message_text_size">גודל גופן הודעה</string>
   <string name="preferences_events__contact_joined_signal">איש קשר הצטרף אל Signal</string>
   <string name="preferences_notifications__priority">עדיפות</string>
+  <string name="preferences_communication__category_sealed_sender">שולח אטום</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">אפשר שולח אטום עבור הודעות נכנסות מאת אי־אנשי קשר ומאת אנשים איתם לא שיתפת את הפרופיל שלך.</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
