--- a/res/values-ku/strings.xml
+++ b/res/values-ku/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">Na</string>
   <string name="delete">Jêbîrîn</string>
   <string name="please_wait">Raweste...</string>
+  <string name="save">Tomarkirin</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Peyama nû</string>
   <!--ApplicationPreferencesActivity-->
@@ -67,9 +68,11 @@
   <string name="BucketedThreadMedia_This_month">Vê meh</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Gazî tê</string>
+  <!--CameraActivity-->
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Derxistin</string>
   <string name="ClearProfileActivity_remove_profile_photo">Derxistina wêneya profîlê?</string>
+  <!--CommunicationActions-->
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Hejmara ewletî bi %1$s re hat guhartin. Belkî kesek dixwaze rêya we bibire, an belkî %2$s tenê Signalê xwe dîsa saz kir.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Belkî tu dixwazî hejmara ewletî pê têkilî piştrastbikî.</string>
@@ -260,6 +263,7 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Ji bo wêne xwe amade yî?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Niha tu dikarî bi hevalên xwe re bi Signalê wêneyek û navekî profîl parve bikî</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Profîlên Signalê viderê ne</string>
+  <!--GcmBroadcastReceiver-->
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Ragihandina Signalê çênabe!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Li Google Play Services Signal nikaribû qeydbike. Peyam û gaziyên Signalê hatin seqetkirin, ka li Şikil &gt; Taybet biceribîne dîsa qeydbikin.</string>
@@ -311,6 +315,7 @@
   <string name="InviteActivity_lets_switch_to_signal">Em biçin Signalê: %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Belkî bername ji bo parvekirin cem te nîne</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Heval ji hevalan re bêşifre naxivin.</string>
+  <!--Job-->
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Nikaribûm bişînim</string>
   <string name="MessageDetailsRecipient_new_safety_number">Hejmara ewlehiya nû</string>
@@ -332,6 +337,7 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">Radikim</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Peyam radikim...</string>
   <string name="MediaOverviewActivity_Documents">Belge</string>
+  <string name="MediaOverviewActivity_Select_all">Hemû bijerînin</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Gaziya Signalê tê pêkanîn</string>
   <string name="NotificationBarManager__establishing_signal_call">Gaziya Signalê tê amadekirin</string>
@@ -397,6 +403,7 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Şifre şaş e!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versiyona Google Play Services ku te saz kir nebaş kardike. Google Play Services dîsa sazbike û dîsa biceribîne.</string>
+  <!--PushNotificationReceiveJob-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Vê bername pîvan bike</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Heger vê bernameyê hezdikî, hinek dem bide me û pîvan bike.</string>
@@ -410,6 +417,7 @@
   <string name="RecipientPreferenceActivity_block">Bilok bikin</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Jê danûstendin re blok rabikin?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Tu dikarî jê danûstendin dîsa peyam û gazî bistînî</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Derketin ji kom çênebû</string>
   <string name="RecipientPreferenceActivity_unblock">Blok rabikin</string>
   <string name="RecipientPreferenceActivity_enabled">Rêda</string>
   <string name="RecipientPreferenceActivity_disabled">Seqitandin</string>
@@ -455,6 +463,7 @@
   <string name="SearchFragment_header_conversations">Peyivîn</string>
   <string name="SearchFragment_header_contacts">Danûstendin</string>
   <string name="SearchFragment_header_messages">Peyam</string>
+  <!--SendJob-->
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Zêde bike tekiliyan</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Vexwandin Signalê</string>
