--- a/res/values-nb/strings.xml
+++ b/res/values-nb/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">Nei</string>
   <string name="delete">Slett</string>
   <string name="please_wait">Vent litt …</string>
+  <string name="save">Lagre</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Ny melding</string>
   <!--ApplicationPreferencesActivity-->
@@ -67,9 +68,14 @@
   <string name="BucketedThreadMedia_This_month">Denne måneden</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Inngående samtale</string>
+  <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">Kamera utilgjengelig.</string>
+  <string name="CameraActivity_image_save_failure">Kunne ikke lagre bildet.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Fjern</string>
   <string name="ClearProfileActivity_remove_profile_photo">Fjerne profilbilde?</string>
+  <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Ingen nettleser funnet.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Sikkerhetsnummeret ditt med %1$s er endret. Dette kan enten bety at noen prøver å fange opp kommunikasjonen din, eller at %2$s har  installert Signal på nytt.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Du bør kontrollere sikkerhetsnumrene dine mot denne kontakten.</string>
@@ -130,7 +136,9 @@
   <string name="ConversationActivity_error_leaving_group">Klarte ikke å forlate gruppe</string>
   <string name="ConversationActivity_specify_recipient">Velg en kontakt</string>
   <string name="ConversationActivity_unblock_this_contact_question">Vil du fjerne blokkering av denne kontakten?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Fjerne blokkering av denne gruppen?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Du åpner i så fall for mottak av meldinger og anrop fra denne kontakten.</string>
+  <string name="ConversationActivity_unblock_this_group_description">Eksisterende medlemmer kan igjen legge deg til gruppen igjen.</string>
   <string name="ConversationActivity_unblock">Fjern blokkering</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">Vedlegg overskrider maksimal størrelsesgrense for gjeldende meldingstype.</string>
   <string name="ConversationActivity_quick_camera_unavailable">Kamera utilgjengelig</string>
@@ -264,6 +272,8 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Klar for nærbilde?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Nå kan du dele et profilbilde og et navn med venner på Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal introduserer profiler</string>
+  <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Mottar en melding...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Varig Signal-kommunikasjonsfeil.</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal klarte ikke å registrere seg som Google Play-tjeneste. Signal-meldinger og samtaler er derfor slått av. Prøv å registrere programmet på nytt under Innstillinger &gt; Avansert.</string>
@@ -315,6 +325,8 @@
   <string name="InviteActivity_lets_switch_to_signal">La oss bytte til Signal. %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Det ser ut som at du ikke har noen programmer å dele denne informasjonen med.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Venner bør ikke prate ukryptert over nettet.</string>
+  <!--Job-->
+  <string name="Job_working_in_the_background">Jobber i bakgrunnen...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Sending mislyktes</string>
   <string name="MessageDetailsRecipient_new_safety_number">Nytt sikkerhetsnummer</string>
@@ -336,6 +348,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">Sletter</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Sletter meldinger …</string>
   <string name="MediaOverviewActivity_Documents">Dokumenter</string>
+  <string name="MediaOverviewActivity_Select_all">Velg alle</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Henter vedlegg …</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal-samtale pågår</string>
   <string name="NotificationBarManager__establishing_signal_call">Setter opp Signal-anrop</string>
@@ -405,6 +419,8 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Ugyldig passord!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">Versjonen av Google Play Tjenester som er installert på denne enheten fungerer ikke skikkelig. Installer Google Play Tjenester på nytt og prøv igjen.</string>
+  <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Mottar en melding...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Vurder dette programmet</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Hvis du liker dette programmet, vil vi gjerne at du hjelper oss ved å gi din vurdering.</string>
@@ -415,9 +431,15 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Vil du blokkere denne kontakten?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Du kan i så fall ikke lenger motta meldinger og anrop fra vedkommende.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Blokker og forlat denne gruppen?</string>
+  <string name="RecipientPreferenceActivity_block_group">Blokker denne gruppen?</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">Du vil ikke lenger motta meldinger eller oppdateringer fra denne gruppen.</string>
   <string name="RecipientPreferenceActivity_block">Blokker</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Vil du fjerne blokkering av denne kontakten?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Du åpner i så fall for mottak av meldinger og anrop fra denne kontakten.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Fjerne blokkering av denne gruppen?</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">Eksisterende medlemmer kan igjen legge deg til gruppen igjen.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Klarte ikke å forlate gruppe</string>
   <string name="RecipientPreferenceActivity_unblock">Fjern blokkering</string>
   <string name="RecipientPreferenceActivity_enabled">Slått på</string>
   <string name="RecipientPreferenceActivity_disabled">Slått av</string>
@@ -457,6 +479,10 @@ skrev inn (%s) er ugyldig.</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal må ha tilgang til kontakter og medier på systemet for å kunne koble til venner, sende/motta meldinger og ringe</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Klarte ikke å koble til tjenesten. Kontroller at du har en stabil nettilkobling og prøv på nytt.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Signal kan hente SMS-bekreftelseskoden din automatisk hvis du tillater at programmet leser SMS-meldinger på enheten.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Du er nå %d steg unna fra å sende inn en feilsøkingslogg.</item>
+    <item quantity="other">Du er nå %d steg unna fra å sende inn en feilsøkingslogg.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Klarte ikke å lagre bildeendringer</string>
   <!--Search-->
@@ -464,6 +490,8 @@ skrev inn (%s) er ugyldig.</string>
   <string name="SearchFragment_header_conversations">Samtaler</string>
   <string name="SearchFragment_header_contacts">Kontakter</string>
   <string name="SearchFragment_header_messages">Meldinger</string>
+  <!--SendJob-->
+  <string name="SendJob_sending_a_message">Sender en melding...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Legg til kontakt</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Inviter til Signal</string>
@@ -587,6 +615,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="QuickResponseService_problem_sending_message">Det oppstod et problem under sending av melding.</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Lagret til %s</string>
+  <string name="SaveAttachmentTask_saved">Lagret</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Søk</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Søk etter samtaler, kontakter, og meldinger</string>
@@ -998,6 +1027,12 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="preferences_chats__message_text_size">Skriftstørrelse i meldinger</string>
   <string name="preferences_events__contact_joined_signal">Når kontakt installerer Signal</string>
   <string name="preferences_notifications__priority">Prioritet</string>
+  <string name="preferences_communication__category_sealed_sender">Forseglet Avsender</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">Visningsindikatorer</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Vis et statusikon når du velger \"Meldingsdetaljer\" på meldinger som ble levert ved bruk av forseglet avsender.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Godta fra hvem som helst</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">Aktiver forseglet avsender for innkommende meldinger fra avsendere og personer som du ikke har delt profilen din med.</string>
+  <string name="preferences_communication__sealed_sender_learn_more">Lær mer</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1130,6 +1165,7 @@ Mottok nøkkelutvekslingsmelding for ugyldig protokollversion.</string>
   <string name="preferences_chats__create_backup">Lag sikkerhetskopi</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Skriv inn passordfrase for sikkerhetskopi</string>
   <string name="RegistrationActivity_restore">Gjenopprett</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">Kan ikke importere sikkerhetskopier fra nyere versjoner av Signal.</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Feil passordfrase for sikkerhetskopi</string>
   <string name="RegistrationActivity_checking">Kontrollerer …</string>
   <string name="RegistrationActivity_d_messages_so_far">%d meldinger hittil …</string>
