--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">Nee</string>
   <string name="delete">Verwijderen</string>
   <string name="please_wait">Even geduld...</string>
+  <string name="save">Opslaan</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Nieuw bericht</string>
   <!--ApplicationPreferencesActivity-->
@@ -67,9 +68,14 @@
   <string name="BucketedThreadMedia_This_month">Deze maand</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">Inkomende oproep</string>
+  <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">Camera niet beschikbaar.</string>
+  <string name="CameraActivity_image_save_failure">Afbeelding opslaan mislukt.</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Verwijderen</string>
   <string name="ClearProfileActivity_remove_profile_photo">Profielfoto verwijderen?</string>
+  <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">Geen webbrowser gevonden.</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">Je veiligheidsnummer met %1$s is veranderd. Dit kan betekenen dat iemand je communicatie probeert te onderscheppen, of gewoon dat %2$s Signal opnieuw geïnstalleerd heeft.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Veiligheidsnummers met deze contactpersoon verifiëren.</string>
@@ -130,7 +136,9 @@
   <string name="ConversationActivity_error_leaving_group">Fout bij het verlaten van de groep</string>
   <string name="ConversationActivity_specify_recipient">Kies een contact</string>
   <string name="ConversationActivity_unblock_this_contact_question">Contact deblokkeren?</string>
+  <string name="ConversationActivity_unblock_this_group_question">Deze groep deblokkeren?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Je kan weer berichten en oproepen van dit contact ontvangen.</string>
+  <string name="ConversationActivity_unblock_this_group_description">Bestaande leden kunnen je weer aan de groep toevoegen.</string>
   <string name="ConversationActivity_unblock">Ontblokken</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">Bijlage overschrijdt de maximale grootte voor het type bericht dat je wil verzenden.</string>
   <string name="ConversationActivity_quick_camera_unavailable">Camera niet beschikbaar</string>
@@ -264,6 +272,8 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Klaar voor je close-up?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Je kan nu een profielfoto en naam met je vrienden op Signal delen</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal-profielen zijn nu beschikbaar</string>
+  <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">Bericht ophalen...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Permanente Signal-communicatiefout!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal was niet in staat met Google Play services te registreren. Signal berichten en oproepen zijn nu uitgeschakeld, probeer opnieuw te registreren via Instellingen &gt; Geavanceerd.</string>
@@ -315,6 +325,8 @@
   <string name="InviteActivity_lets_switch_to_signal">Laten we overstappen naar Signal: %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Het lijkt erop dat je geen apps hebt om naar te delen.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Vrienden laten vrienden niet onversleuteld chatten.</string>
+  <!--Job-->
+  <string name="Job_working_in_the_background">Bezig op de achtergrond...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">Verzenden mislukt</string>
   <string name="MessageDetailsRecipient_new_safety_number">Nieuw veiligheidsnummer</string>
@@ -336,6 +348,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">Verwijderen</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">Berichten verwijderen...</string>
   <string name="MediaOverviewActivity_Documents">Documenten</string>
+  <string name="MediaOverviewActivity_Select_all">Alles selecteren</string>
+  <string name="MediaOverviewActivity_collecting_attachments">Bijlagen aan het verzamelen...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal-oproep aan de gang</string>
   <string name="NotificationBarManager__establishing_signal_call">Opzetten van Signal-oproep</string>
@@ -405,6 +419,8 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Ongeldig wachtwoord!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">De versie van Google Play Services die je in gebruik hebt werkt niet zoals het hoort. Installeer Google Play Services opnieuw en probeer het nog eens.</string>
+  <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">Bericht ophalen...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Beoordeel deze app</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Gebruik je deze app graag? Help ons dan even met een beoordeling.</string>
@@ -415,9 +431,15 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Contact blokkeren?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Je kan niet langer berichten en oproepen van dit contact ontvangen.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">Deze groep blokkeren en verlaten?</string>
+  <string name="RecipientPreferenceActivity_block_group">Deze groep blokkeren?</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">Je zult niet langer berichten of updates van deze groep ontvangen.</string>
   <string name="RecipientPreferenceActivity_block">Blokkeren</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Contact deblokkeren?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Je kan weer berichten en oproepen van dit contact ontvangen.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">Deze groep deblokkeren?</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">Bestaande leden kunnen je weer aan de groep toevoegen.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Fout bij het verlaten van de groep</string>
   <string name="RecipientPreferenceActivity_unblock">Deblokkeren</string>
   <string name="RecipientPreferenceActivity_enabled">Ingeschakeld</string>
   <string name="RecipientPreferenceActivity_disabled">Uitgeschakeld</string>
@@ -457,6 +479,10 @@ ingevoerd (%s) is ongeldig.</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal heeft toegang nodig tot je contacten en media om je met je vrienden te laten verbinden, elkaar berichten te sturen en beveiligde oproepen te maken</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">Verbinden met dienst niet mogelijk. Controleer je netwerkverbinding en probeer het opnieuw.</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">Als je Signal toestaat sms-berichten te lezen, kan het je verificatiecode automatisch detecteren om je telefoonnummer eenvoudig te verifiëren.</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="one">Je bent nu %d stap verwijderd van het indienen van een debuglog.</item>
+    <item quantity="other">Je bent nu %d stappen verwijderd van het indienen van een debuglog.</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">Mislukt om bewerkte afbeelding op te slaan</string>
   <!--Search-->
@@ -464,6 +490,8 @@ ingevoerd (%s) is ongeldig.</string>
   <string name="SearchFragment_header_conversations">Conversaties</string>
   <string name="SearchFragment_header_contacts">Contacten</string>
   <string name="SearchFragment_header_messages">Berichten</string>
+  <!--SendJob-->
+  <string name="SendJob_sending_a_message">Bericht versturen...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Toevoegen aan contacten</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Uitnodigen voor Signal</string>
@@ -587,6 +615,7 @@ Sleuteluitwisselingsbericht ontvangen voor een verkeerde protocol-versie.</strin
   <string name="QuickResponseService_problem_sending_message">Fout bij verzenden van bericht!</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">Opgeslagen naar %s</string>
+  <string name="SaveAttachmentTask_saved">Opgeslagen</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">Zoeken</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">Zoek naar conversaties, contacten, en berichten</string>
@@ -997,6 +1026,10 @@ Sleuteluitwisselingsbericht ontvangen voor een verkeerde protocol-versie.</strin
   <string name="preferences_chats__message_text_size">Tekstgrootte voor berichten</string>
   <string name="preferences_events__contact_joined_signal">Contact gebruikt nu Signal</string>
   <string name="preferences_notifications__priority">Prioriteit</string>
+  <string name="preferences_communication__category_sealed_sender">Verzegelde afzender</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">Laat een statusicoon zien als je drukt op \"Berichtdetails\" bij berichten die zijn afgeleverd met een verzegelde afzender.</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">Van iedereen toestaan</string>
+  <string name="preferences_communication__sealed_sender_learn_more">Meer leren</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1128,6 +1161,7 @@ Sleuteluitwisselingsbericht ontvangen voor een verkeerde protocol-versie.</strin
   <string name="preferences_chats__create_backup">Back-up maken</string>
   <string name="RegistrationActivity_enter_backup_passphrase">Voer back-upwachtwoord in</string>
   <string name="RegistrationActivity_restore">Herstellen</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">Kan geen back-ups importeren uit nieuwere versies van Signal</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">Verkeerd back-upwachtwoord</string>
   <string name="RegistrationActivity_checking">Controleren...</string>
   <string name="RegistrationActivity_d_messages_so_far">%dberichten tot nu toe...</string>
@@ -1142,10 +1176,10 @@ Sleuteluitwisselingsbericht ontvangen voor een verkeerde protocol-versie.</strin
   <string name="BackupDialog_disable_and_delete_all_local_backups">Uitschakelen en alle lokale back-ups verwijderen?</string>
   <string name="BackupDialog_delete_backups_statement">Back-ups verwijderen</string>
   <string name="BackupDialog_copied_to_clipboard">Gekopieerd naar klembord</string>
-  <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal heeft toegang nodig tot de opslagruimte om backups te kunnen maken maar deze toestemming is permanent geweigerd. Ga naar de instellingen, selecteer \"Toestemmingen\" en schakel \"Opslagruimte\" in.</string>
+  <string name="ChatsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal heeft toegang nodig tot de opslagruimte om back-ups te kunnen maken maar deze toestemming is permanent geweigerd. Ga naar de instellingen, selecteer \"Toestemmingen\" en schakel \"Opslagruimte\" in.</string>
   <string name="ChatsPreferenceFragment_last_backup_s">Laatste back-up: %s</string>
   <string name="ChatsPreferenceFragment_in_progress">Bezig</string>
-  <string name="LocalBackupJob_creating_backup">Backup aan het maken...</string>
+  <string name="LocalBackupJob_creating_backup">Back-up aan het maken...</string>
   <string name="ProgressPreference_d_messages_so_far">%dberichten tot nu toe</string>
   <string name="RegistrationActivity_verify_s">%s verifiëren</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">Voer de verificatiecode die naar %s gestuurd is.</string>
