--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">Não</string>
   <string name="delete">Apagar</string>
   <string name="please_wait">Por favor aguarde...</string>
+  <string name="save">Guardar</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">Nova mensagem</string>
   <!--ApplicationPreferencesActivity-->
@@ -67,9 +68,11 @@
   <string name="BucketedThreadMedia_This_month">Este mês</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">A receber chamada</string>
+  <!--CameraActivity-->
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">Remover</string>
   <string name="ClearProfileActivity_remove_profile_photo">Remover a foto do perfil?</string>
+  <!--CommunicationActions-->
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">O seu número de segurança com %1$s foi alterado. Isto pode significar que alguém está a tentar interceptar esta comunicação ou simplesmente que %2$s reinstalou o Signal.</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">Pode ser desejável verificar o seu número de segurança com este contacto.</string>
@@ -131,6 +134,7 @@
   <string name="ConversationActivity_specify_recipient">Por favor escolha um contacto</string>
   <string name="ConversationActivity_unblock_this_contact_question">Desbloquear este contacto?</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Irá voltar a receber mensagens e chamadas deste contacto.</string>
+  <string name="ConversationActivity_unblock_this_group_description">Membros actuais poderão voltar a adicionar o seu contacto ao grupo.</string>
   <string name="ConversationActivity_unblock">Desbloquear</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">O anexo tem um tamanho superior ao limite do tipo de mensagem que está a enviar.</string>
   <string name="ConversationActivity_quick_camera_unavailable">Câmara indisponível</string>
@@ -264,6 +268,7 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">Pronto para o seu retrato?</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">Agora pode partilhar a sua foto de perfil e nome com amigos no Signal</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Chegaram os perfis Signal</string>
+  <!--GcmBroadcastReceiver-->
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Falha de comunicação do Signal permanente!</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">O Signal não se conseguiu registar com os Serviços Google Play. As mensagens e chamadas do Signal estão desativadas, por favor tente registar-se novamente em Definições &gt; Avançadas.</string>
@@ -315,6 +320,7 @@
   <string name="InviteActivity_lets_switch_to_signal">Vamos mudar para o Signal %1$s</string>
   <string name="InviteActivity_no_app_to_share_to">Parece que não tem aplicações para as quais partilhar.</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">Amigos não deixam amigos falar sem segurança.</string>
+  <!--Job-->
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">O envio falhou</string>
   <string name="MessageDetailsRecipient_new_safety_number">Novo número de segurança</string>
@@ -336,6 +342,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">A apagar</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">A apagar mensagens...</string>
   <string name="MediaOverviewActivity_Documents">Documentos</string>
+  <string name="MediaOverviewActivity_Select_all">Seleccionar tudo</string>
+  <string name="MediaOverviewActivity_collecting_attachments">A recolher anexos...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Chamada do Signal em curso</string>
   <string name="NotificationBarManager__establishing_signal_call">A estabelecer chamada do Signal</string>
@@ -404,6 +412,7 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">Palavra-chave inválida!</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">A sua versão de Google Play Services não está a funcionar correctamente. Por favor reinstale Google Play Services e tente novamente.</string>
+  <!--PushNotificationReceiveJob-->
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">Avalie esta app</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">Se gostou desta aplicação, ajude-nos avaliando-a na Play Store.</string>
@@ -414,9 +423,12 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">Bloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">Não irá receber mensagens ou chamadas adicionais deste contacto.</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">Não voltará a receber mensagens ou actualizações deste grupo.</string>
   <string name="RecipientPreferenceActivity_block">Bloquear</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">Desbloquear este contacto?</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Irá voltar a receber mensagens e chamadas deste contacto.</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">Membros actuais poderão voltar a adicionar o seu contacto ao grupo.</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">Erro ao sair do grupo</string>
   <string name="RecipientPreferenceActivity_unblock">Desbloquear</string>
   <string name="RecipientPreferenceActivity_enabled">Ativo/a</string>
   <string name="RecipientPreferenceActivity_disabled">Desativado/a</string>
@@ -463,6 +475,7 @@ especificou (%s) não é válido.</string>
   <string name="SearchFragment_header_conversations">Conversas</string>
   <string name="SearchFragment_header_contacts">Contactos</string>
   <string name="SearchFragment_header_messages">Mensagens</string>
+  <!--SendJob-->
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">Adicionar aos Contactos</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">Convidar para o Signal</string>
