--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -5,6 +5,7 @@
   <string name="no">否</string>
   <string name="delete">刪除</string>
   <string name="please_wait">請稍候...</string>
+  <string name="save">儲存</string>
   <!--AbstractNotificationBuilder-->
   <string name="AbstractNotificationBuilder_new_message">新訊息</string>
   <!--ApplicationPreferencesActivity-->
@@ -64,9 +65,14 @@
   <string name="BucketedThreadMedia_This_month">本月</string>
   <!--CallScreen-->
   <string name="CallScreen_Incoming_call">來電</string>
+  <!--CameraActivity-->
+  <string name="CameraActivity_camera_unavailable">相機無法使用。</string>
+  <string name="CameraActivity_image_save_failure">儲存照片失敗。</string>
   <!--ClearProfileActivity-->
   <string name="ClearProfileActivity_remove">移除</string>
   <string name="ClearProfileActivity_remove_profile_photo">移除頭像照片？</string>
+  <!--CommunicationActions-->
+  <string name="CommunicationActions_no_browser_found">找不到網路瀏覽器。</string>
   <!--ConfirmIdentityDialog-->
   <string name="ConfirmIdentityDialog_your_safety_number_with_s_has_changed">%1$s 的安全碼產生變動。這有可能是有不明人士試圖攔截您的通訊／對話內容，或是因為 %2$s 重新安裝 Signal。</string>
   <string name="ConfirmIdentityDialog_you_may_wish_to_verify_your_safety_number_with_this_contact">您可能希望驗證這名聯絡人的安全碼。</string>
@@ -127,7 +133,9 @@
   <string name="ConversationActivity_error_leaving_group">離開群組時發生錯誤</string>
   <string name="ConversationActivity_specify_recipient">請選擇聯絡人</string>
   <string name="ConversationActivity_unblock_this_contact_question">解除封鎖此聯絡人？</string>
+  <string name="ConversationActivity_unblock_this_group_question">解除封鎖這個群組？</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">您將可以再次收到來自此聯絡人的訊息與通話。</string>
+  <string name="ConversationActivity_unblock_this_group_description">現存的組員將可以再次將你加入群組。</string>
   <string name="ConversationActivity_unblock">解除封鎖</string>
   <string name="ConversationActivity_attachment_exceeds_size_limits">當前訊息的附件類型已經超越大小限制。</string>
   <string name="ConversationActivity_quick_camera_unavailable">無法使用相機</string>
@@ -250,6 +258,8 @@
   <string name="ExperienceUpgradeActivity_ready_for_your_closeup">準備好你的特寫了嗎？</string>
   <string name="ExperienceUpgradeActivity_now_you_can_share_a_profile_photo_and_name_with_friends_on_signal">現在，你可以分享你的頭像照片及名字給在 Signal 中的朋友</string>
   <string name="ExperienceUpgradeActivity_signal_profiles_are_here">Signal 個人資訊就在這裡</string>
+  <!--GcmBroadcastReceiver-->
+  <string name="GcmBroadcastReceiver_retrieving_a_message">回收一個訊息...</string>
   <!--GcmRefreshJob-->
   <string name="GcmRefreshJob_Permanent_Signal_communication_failure">Signal 持續發生傳輸異常！</string>
   <string name="GcmRefreshJob_Signal_was_unable_to_register_with_Google_Play_Services">Signal 無法順利與 Google Play Services 註冊，Signal 訊息與通話已經停用，請嘗試在設定 &gt; 進階中重新註冊。</string>
@@ -299,6 +309,8 @@
   <string name="InviteActivity_lets_switch_to_signal">讓我們切換到 Signal：%1$s</string>
   <string name="InviteActivity_no_app_to_share_to">看起來您沒有任何可以分享的應用。</string>
   <string name="InviteActivity_friends_dont_let_friends_text_unencrypted">朋友不該讓朋友之間的聊天未經加密。</string>
+  <!--Job-->
+  <string name="Job_working_in_the_background">在背景作業...</string>
   <!--MessageDetailsRecipient-->
   <string name="MessageDetailsRecipient_failed_to_send">傳送失敗</string>
   <string name="MessageDetailsRecipient_new_safety_number">新的安全碼</string>
@@ -318,6 +330,8 @@
   <string name="MediaOverviewActivity_Media_delete_progress_title">正在刪除</string>
   <string name="MediaOverviewActivity_Media_delete_progress_message">正在刪除訊息...</string>
   <string name="MediaOverviewActivity_Documents">文件</string>
+  <string name="MediaOverviewActivity_Select_all">全選</string>
+  <string name="MediaOverviewActivity_collecting_attachments">正在收集附件...</string>
   <!--- NotificationBarManager-->
   <string name="NotificationBarManager_signal_call_in_progress">Signal 通話進行中</string>
   <string name="NotificationBarManager__establishing_signal_call">Signal 通話連線中</string>
@@ -386,6 +400,8 @@
   <string name="PassphrasePromptActivity_invalid_passphrase_exclamation">無效的密碼！</string>
   <!--PlayServicesProblemFragment-->
   <string name="PlayServicesProblemFragment_the_version_of_google_play_services_you_have_installed_is_not_functioning">您目前安裝的 Google Play 服務版本無法正常運作。請重新安裝 Google Play 服務然後重試。</string>
+  <!--PushNotificationReceiveJob-->
+  <string name="PushNotificationReceiveJob_retrieving_a_message">回收一個訊息...</string>
   <!--RatingManager-->
   <string name="RatingManager_rate_this_app">評分這個應用程式</string>
   <string name="RatingManager_if_you_enjoy_using_this_app_please_take_a_moment">如果您喜歡使用此應用程式，請使用片刻時間幫我們對其進行評分。</string>
@@ -396,9 +412,15 @@
   <!--RecipientPreferencesActivity-->
   <string name="RecipientPreferenceActivity_block_this_contact_question">封鎖此聯絡人？</string>
   <string name="RecipientPreferenceActivity_you_will_no_longer_receive_messages_and_calls_from_this_contact">您將不會再次收到來自此聯絡人的訊息與通話。</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group">要封鎖及離開這個群組？</string>
+  <string name="RecipientPreferenceActivity_block_group">封鎖這個群組？</string>
+  <string name="RecipientPreferenceActivity_block_and_leave_group_description">你將無法從此群組收到訊息或更新。</string>
   <string name="RecipientPreferenceActivity_block">封鎖</string>
   <string name="RecipientPreferenceActivity_unblock_this_contact_question">解除封鎖此聯絡人？</string>
   <string name="RecipientPreferenceActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">您將可以再次收到來自此聯絡人的訊息與通話。</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_question">解除封鎖這個群組？</string>
+  <string name="RecipientPreferenceActivity_unblock_this_group_description">現存的組員將可以再次將你加入群組。</string>
+  <string name="RecipientPreferenceActivity_error_leaving_group">離開群組時發生錯誤</string>
   <string name="RecipientPreferenceActivity_unblock">解除封鎖</string>
   <string name="RecipientPreferenceActivity_enabled">啟用</string>
   <string name="RecipientPreferenceActivity_disabled">停用</string>
@@ -439,6 +461,9 @@
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">Signal 需要存取的你的聯絡人及媒體，以聯絡你的朋友、交換訊息、及撥打私密電話。</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">無法連接服務。請檢查網路連線並再試一次。</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">如果你允許 Signal 讀取 SMS 訊息，你可以簡單的驗證電話號碼，Signal 會自動偵測你的驗證碼。</string>
+  <plurals name="RegistrationActivity_debug_log_hint">
+    <item quantity="other">你現在距離提交偵錯日誌只有%d步之遙。</item>
+  </plurals>
   <!--ScribbleActivity-->
   <string name="ScribbleActivity_save_failure">無法儲存圖片的變更</string>
   <!--Search-->
@@ -446,6 +471,8 @@
   <string name="SearchFragment_header_conversations">對話</string>
   <string name="SearchFragment_header_contacts">聯絡人</string>
   <string name="SearchFragment_header_messages">訊息</string>
+  <!--SendJob-->
+  <string name="SendJob_sending_a_message">正在傳送一個訊息...</string>
   <!--SharedContactDetailsActivity-->
   <string name="SharedContactDetailsActivity_add_to_contacts">新增至連絡人</string>
   <string name="SharedContactDetailsActivity_invite_to_signal">邀請至 Signal</string>
@@ -571,6 +598,7 @@
   <string name="QuickResponseService_problem_sending_message">傳送訊息出現問題！</string>
   <!--SaveAttachmentTask-->
   <string name="SaveAttachmentTask_saved_to">儲存到 %s</string>
+  <string name="SaveAttachmentTask_saved">已儲存</string>
   <!--SearchToolbar-->
   <string name="SearchToolbar_search">搜尋</string>
   <string name="SearchToolbar_search_for_conversations_contacts_and_messages">搜尋對話、聯絡人與訊息</string>
@@ -973,6 +1001,12 @@
   <string name="preferences_chats__message_text_size">訊息字體大小</string>
   <string name="preferences_events__contact_joined_signal">聯絡人已加入 Signal</string>
   <string name="preferences_notifications__priority">優先順序</string>
+  <string name="preferences_communication__category_sealed_sender">密封發件人</string>
+  <string name="preferences_communication__sealed_sender_display_indicators">顯示指標</string>
+  <string name="preferences_communication__sealed_sender_display_indicators_description">在使用密封發件人傳遞的訊息上選擇“訊息細節”時顯示狀態圖示。</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone">允許任何人</string>
+  <string name="preferences_communication__sealed_sender_allow_from_anyone_description">啟用密封發件人對來自非聯絡人及其他人傳來的訊息，將不會對其分享你的個人資訊。</string>
+  <string name="preferences_communication__sealed_sender_learn_more">了解更多</string>
   <!--****************************************-->
   <!--menus-->
   <!--****************************************-->
@@ -1103,6 +1137,7 @@
   <string name="preferences_chats__create_backup">建立備份</string>
   <string name="RegistrationActivity_enter_backup_passphrase">輸入備份密碼</string>
   <string name="RegistrationActivity_restore">還原</string>
+  <string name="RegistrationActivity_backup_failure_downgrade">無法從較新版本的 Signal 匯入備份檔</string>
   <string name="RegistrationActivity_incorrect_backup_passphrase">不正確的備份密碼</string>
   <string name="RegistrationActivity_checking">檢查中... </string>
   <string name="RegistrationActivity_d_messages_so_far">目前為止有 %d 則訊息.. </string>
